--- a/style/main.css
+++ b/style/main.css
@@ -16,19 +16,34 @@ input {
     width: 50px;
 }
 
-#timer {
+#countdown {
+    margin-top: 15px;
+    font-size: 30px;
+}
+
+#countup {
+    margin-top: 15px;
+    font-size: 30px;
+}
+
+#timeBlocks {
+    display: flex;
+    flex-direction: row;
+}
+
+#RecordsClear {
+    display: none;
+}
+
+.timeBlock {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-left: 30px;
     padding: 30px;
     height: 200px;
     width: 200px;
     background-color: aqua;
-}
-
-#countdown {
-    margin-top: 15px;
-    font-size: 30px;
 }
 
