--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Teko&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Play&display=swap');
 
 body {
-    font-family: 'Teko', sans-serif;
+    font-family: 'Play', sans-serif;
     display: flex;
 	flex-direction: column;
 }
@@ -15,7 +15,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 45px;
+    font-size: 35px;
     margin: auto;
 }
 
@@ -23,9 +23,21 @@ input {
     width: 50px;
 }
 
+button {
+    color: black;
+    width: 50px;
+    height: 25px;
+    margin:0 0.3em 0.3em 0;
+    font-size: 10px;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    text-align:center;
+}
+
 a.timeBlock {
     text-decoration: none;
-    font-size: 60px;
+    font-size: 30px;
     color: #2A5766;
     box-shadow: black 2px 4px 7px;
 }
@@ -41,9 +53,8 @@ a.timeBlock {
 }
 
 #timeBlocks {
-    display: grid;
-    grid-row-gap: 50px;
-    
+    display: flex;
+	flex-direction: column;
 }
 
 #RecordsClear {
@@ -59,12 +70,13 @@ a.timeBlock {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-left: 30px;
+    margin: auto;
+    margin-top: 50px;
     padding: 30px;
     height: 200px;
     width: 200px;
+    border-radius: 5px;
     background-color: aqua;
-    margin: auto;
 }
 
 .home {
@@ -76,7 +88,8 @@ a.timeBlock {
     background-color: teal;
     height: 50px;
     width: 50px;
-    font-size: 28px;
+    border-radius: 5px;
+    font-size: 15px;
 }
 
 .github {
@@ -84,4 +97,5 @@ a.timeBlock {
     color: thistle;
     width: 25px;
     font-size: 30px;
+    margin-top: 15px;
 }
