--- a/style/style-stopwatch.css
+++ b/style/style-stopwatch.css
@@ -6,10 +6,16 @@ body {
 
 h2 {
     margin-top: 0;
+    margin-bottom: 2px;
 }
 
 ul {
     height: 200px;
+    list-style-type: none;
+    padding: 0;
+    font-size: 17px;
+    color: black;
+    margin-bottom: 30px;
 }
 
 .timeBlock {
