--- a/style/style-timer.css
+++ b/style/style-timer.css
@@ -3,3 +3,28 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+h3 {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: teal;
+    font-size: 20px;
+}
+
+#addm {
+    display: none;
+    margin-left: 3px;
+}
+
+#minutes {
+    margin-bottom: 8px;
+}
+
+.input-a {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
